--- a/offers.html
+++ b/offers.html
@@ -21,10 +21,14 @@
               thirteenBg: "#595959",
               lightGray: "#8C8C8C",
               darkGray: "#595959",
+              smNav: "#333333",
             },
             fontFamily: {
               mont: ["montserrat"],
               san: ["Open Sans"],
+            },
+            screens: {
+              sm: "300px",
             },
           },
         },
@@ -38,11 +42,173 @@
       }
     </style>
   </head>
-  <body class="overflow-hidden">
+  <body class="">
     <section class="body">
       <div class="bg-gray-200">
+        <!-- Nav Here -->
+        <nav
+          role="navigation"
+          class="sm:flex justify-between items-center p-3 lg:px-40 lg:h-28 sm:h-16 sm:py-5 text-white relative bg-white md:hidden"
+        >
+          <a href="index.html" class="ml-6"
+            ><img
+              src="./Assets/Eki-Logo.svg"
+              class="lg:w-full sm:w-3/4 w-20"
+              alt=""
+          /></a>
+          <div class="px-4 cursor-pointer md:hidden" id="bars">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 text-green-700"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16m-7 6h7"
+              />
+            </svg>
+          </div>
+          <div
+            class="hidden md:block mr-4 p-5 space-x-4 z-10 font-semibold text-gray-300"
+            id="menu"
+          >
+            <a
+              href="index.html"
+              class="hover:text-white transition duration-500 ease-in-out text-primary"
+              >Home</a
+            >
+            <a
+              href="products.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Products</a
+            >
+            <a
+              href="notifications.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Notifications</a
+            >
+            <a
+              href="accountPage.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >My Account</a
+            >
+            <a
+              href="#"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Logout</a
+            >
+          </div>
+        </nav>
+
+        <!-- Mobile Nav Bar -->
+        <div
+          class="bg-smNav bg-opacity-90 top-0 left-0 h-screen overflow-hidden fixed hidden z-50 w-full p-5 text-white transition duration-500 ease-in-out"
+          id="mobileNav"
+        >
+          <div class="bg-white fixed top-20 right-0 w-3/4 h-screen">
+            <div class="grid grid-cols-2">
+              <div class="">
+                <img src="./Assets/Eki-white.svg" class="w-16" alt="" />
+              </div>
+            </div>
+
+            <div class="font-mont py-5 font-semibold">
+              <ul class="flex flex-col space-y-5 text-gray-500">
+                <a href="index.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                      />
+                    </svg>
+                    Home
+                  </li>
+                </a>
+                <a href="accountPage.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
+                      />
+                    </svg>
+                    Dashboard
+                  </li>
+                </a>
+                <a href="offers.html">
+                  <li
+                    class="flex flex-row transition duration-300 text-green-500 border-r-green-500 border-r-4 bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"
+                      />
+                    </svg>
+                    Offers
+                  </li>
+                </a>
+                <a href="profile.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                      />
+                    </svg>
+                    Profile
+                  </li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- End Nav Here -->
         <div class="flex flex-row">
-          <div class="basis-1/4 p-3">
+          <div class="basis-1/4 md:block sm:hidden p-3">
             <div class="rounded-lg bg-white p-5">
               <div class="flex justify-center mb-5">
                 <img src="./Assets/Logo.png" alt="" />
@@ -52,17 +218,7 @@
                 <ul class="flex flex-col space-y-5 text-gray-500 font-semibold">
                   <a href="index.html">
                     <li
-                      class="
-                        flex flex-row
-                        transition
-                        duration-300
-                        ease-in-out
-                        hover:text-green-500
-                        hover:border-r-green-500
-                        hover:border-r-4
-                        hover:bg-green-200
-                        p-3
-                      "
+                      class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -83,16 +239,7 @@
                   </a>
                   <a href="accountPage.html">
                     <li
-                      class="
-                        flex flex-row
-                        transition
-                        duration-300
-                        hover:text-green-500
-                        hover:border-r-green-500
-                        hover:bg-green-200
-                        hover:border-r-4
-                        p-3
-                      "
+                      class="flex flex-row transition duration-300 hover:text-green-500 hover:border-r-green-500 hover:bg-green-200 hover:border-r-4 p-3"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -113,16 +260,7 @@
                   </a>
                   <a href="orders.html">
                     <li
-                      class="
-                        flex flex-row
-                        transition
-                        duration-300
-                        ease-in-out
-                        text-green-500
-                        border-r-green-500 border-r-4
-                        bg-green-200
-                        p-3
-                      "
+                      class="flex flex-row transition duration-300 ease-in-out text-green-500 border-r-green-500 border-r-4 bg-green-200 p-3"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -141,17 +279,7 @@
                   </a>
                   <a href="profile.html">
                     <li
-                      class="
-                        flex flex-row
-                        transition
-                        duration-300
-                        ease-in-out
-                        hover:text-green-500
-                        hover:border-r-green-500
-                        hover:border-r-4
-                        hover:bg-green-200
-                        p-3
-                      "
+                      class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -174,24 +302,46 @@
               </div>
             </div>
           </div>
-          <div class="basis-3/4 p-3">
+          <div class="basis-3/4 md:block sm:w-full p-3">
             <div class="bg-white rounded-lg">
+              <!-- Top Header -->
               <div
-                class="
-                  bg-gradient-to-r
-                  from-green-500
-                  to-green-800
-                  grid grid-cols-2
-                  rounded-tr-lg rounded-tl-lg
-                  p-5
-                "
+                class="bg-secondary grid md:grid-cols-2 rounded-tr-lg rounded-tl-lg p-5"
               >
                 <div>
-                  <h1 class="uppercase text-white">Orders</h1>
+                  <h1 class="uppercase text-white flex items-center">Offers</h1>
                 </div>
-                <div class="justify-end flex">
+                <!-- View on Small -->
+                <div class="sm:flex justify-end md:hidden">
+                  <a href="index.html">
+                    <div
+                      class="flex flex-row space-x-1 text-white items-center"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-6 w-6"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                        />
+                      </svg>
+                      <h1>Go to home</h1>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- Exnd View on small -->
+
+                <!-- View on Large -->
+                <div class="md:flex sm:hidden justify-end">
                   <h1 class="mr-2 text-white">
-                    Wallet Balance: &#8358;12,345,533.00
+                    Wallet Balance: <strong>&#8358;12,345,533.00</strong>
                   </h1>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -206,43 +356,30 @@
                     />
                   </svg>
                 </div>
+                <!-- End View on Large -->
               </div>
+              <!-- End Top Header -->
               <div class="p-5">
-                <div class="bg-white shadow-gray-500 shadow-lg rounded-lg p-5">
+                <div
+                  class="bg-white overflow-auto text-gray-500 text-sm shadow-gray-300 shadow-lg rounded-lg p-5"
+                >
                   <div class="grid grid-cols-2 mb-3">
                     <div>
                       <h1 class="uppercase text-gray-500">Offers</h1>
                     </div>
                     <div class="flex justify-end">
-                      <button
-                        class="
-                          bg-primary
-                          hover:bg-green-700
-                          text-white
-                          px-5
-                          py-2
-                          font-semibold
-                          rounded-lg
-                          transition
-                          duration-500
-                          ease-in-out
-                        "
-                      >
-                        Add New Offer
-                      </button>
+                      <a href="newOffer.html">
+                        <button
+                          class="bg-primary hover:bg-green-700 text-white px-5 py-2 font-semibold rounded-lg transition duration-500 ease-in-out"
+                        >
+                          Add New Offer
+                        </button>
+                      </a>
                     </div>
                   </div>
                   <div class="font-mont">
                     <ul
-                      class="
-                        font-semibold
-                        text-darkGray
-                        flex flex-row
-                        space-x-16
-                        bg-gray-300
-                        p-3
-                        text-sm
-                      "
+                      class="font-semibold text-darkGray flex flex-row space-x-16 bg-gray-300 p-3 text-sm"
                     >
                       <li>Product Name</li>
                       <li>
@@ -375,5 +512,6 @@
         </div>
       </div>
     </section>
+    <script src="./app.js"></script>
   </body>
 </html>
