--- a/profile.html
+++ b/profile.html
@@ -46,14 +46,197 @@
       }
       @layer base {
         .nav-item > .active {
-          @apply text-primary border-primary border-b-2;
+          @apply text-secondary border-secondary border-b-2;
         }
       }
     </style>
   </head>
   <body class="">
     <section class="body">
-      <div class="bg-gray-200 h-screen font-mont">
+      <div class="bg-gray-200 font-mont">
+        <!-- Nav Here -->
+        <nav
+          role="navigation"
+          class="sm:flex justify-between items-center p-3 lg:px-40 lg:h-28 sm:h-16 sm:py-5 text-white relative bg-white md:hidden"
+        >
+          <a href="index.html" class="ml-6"
+            ><img
+              src="./Assets/Eki-Logo.svg"
+              class="lg:w-full sm:w-3/4 w-20"
+              alt=""
+          /></a>
+          <div class="px-4 cursor-pointer md:hidden" id="bars">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 text-green-700"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16m-7 6h7"
+              />
+            </svg>
+          </div>
+          <div
+            class="hidden md:block mr-4 p-5 space-x-4 z-10 font-semibold text-gray-300"
+            id="menu"
+          >
+            <a
+              href="index.html"
+              class="hover:text-white transition duration-500 ease-in-out text-primary"
+              >Home</a
+            >
+            <a
+              href="products.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Products</a
+            >
+            <a
+              href="notifications.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Notifications</a
+            >
+            <a
+              href="accountPage.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >My Account</a
+            >
+            <a
+              href="#"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Logout</a
+            >
+          </div>
+        </nav>
+
+        <!-- Mobile Nav Bar -->
+        <div
+          class="bg-smNav bg-opacity-90 top-0 left-0 h-screen overflow-hidden fixed hidden z-50 w-full p-5 text-white transition duration-500 ease-in-out"
+          id="mobileNav"
+        >
+          <div class="bg-white fixed top-20 right-0 w-3/4 h-screen">
+            <div class="grid grid-cols-2">
+              <div class="">
+                <img src="./Assets/Eki-white.svg" class="w-16" alt="" />
+              </div>
+            </div>
+
+            <div class="font-mont py-5 font-semibold">
+              <ul class="flex flex-col space-y-5 text-gray-500">
+                <a href="index.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                      />
+                    </svg>
+                    Home
+                  </li>
+                </a>
+                <a href="accountPage.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
+                      />
+                    </svg>
+                    Dashboard
+                  </li>
+                </a>
+                <a href="orders.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"
+                      />
+                    </svg>
+                    Orders
+                  </li>
+                </a>
+                <a href="saved.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+                      />
+                    </svg>
+                    Saved
+                  </li>
+                </a>
+                <a href="profile.html">
+                  <li
+                    class="flex flex-row transition duration-300 text-green-500 border-r-green-500 border-r-4 bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                      />
+                    </svg>
+                    Profile
+                  </li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- End Nav Here -->
         <div class="flex flex-row">
           <div class="basis-1/4 md:block sm:hidden p-3">
             <div class="rounded-lg bg-white p-5">
@@ -427,7 +610,7 @@
               </div>
               <!-- End of Product Container -->
               <!-- Mobile Products Container -->
-              <div class="bg-white mt-5 rounded-lg p-5">
+              <div class="bg-white mt-5 rounded-lg p-5 md:hidden sm:block">
                 <div class="p-5">
                   <div class="flex flex-col">
                     <div class="flex justify-center relative">
@@ -477,7 +660,7 @@
                     <li class="nav-item" role="presentation">
                       <a
                         href="#tabs-home"
-                        class="block font-medium text-xs leading-tight uppercase border-x-0 border-t-0 border-b-2 border-transparent px-6 py-3 my-2 hover:border-transparent hover:bg-gray-100 focus:border-transparent active"
+                        class="block text-gray-500 font-semibold text-xs leading-tight uppercase border-x-0 border-t-0 border-b-2 border-transparent px-6 py-3 my-2 hover:border-transparent hover:bg-gray-100 focus:border-transparent active"
                         id="tabs-home-tab"
                         data-bs-toggle="pill"
                         data-bs-target="#tabs-home"
@@ -491,7 +674,7 @@
                     <li class="nav-item" role="presentation">
                       <a
                         href="#tabs-profile"
-                        class="block font-medium text-xs leading-tight uppercase border-x-0 border-t-0 border-b-2 border-transparent px-6 py-3 my-2 hover:border-transparent hover:bg-gray-100 focus:border-transparent"
+                        class="block text-gray-500 font-semibold text-xs leading-tight uppercase border-x-0 border-t-0 border-b-2 border-transparent px-6 py-3 my-2 hover:border-transparent hover:bg-gray-100 focus:border-transparent"
                         id="tabs-profile-tab"
                         data-bs-toggle="pill"
                         data-bs-target="#tabs-profile"
@@ -504,7 +687,7 @@
                     <li class="nav-item" role="presentation">
                       <a
                         href="#tabs-messages"
-                        class="navlink block font-medium text-xs leading-tight uppercase border-x-0 border-t-0 border-b-2 border-transparent px-6 py-3 my-2 hover:border-transparent hover:bg-gray-100 focus:border-transparent"
+                        class="navlink block text-gray-500 font-semibold text-xs leading-tight uppercase border-x-0 border-t-0 border-b-2 border-transparent px-6 py-3 my-2 hover:border-transparent hover:bg-gray-100 focus:border-transparent"
                         id="tabs-messages-tab"
                         data-bs-toggle="pill"
                         data-bs-target="#tabs-messages"
@@ -636,6 +819,32 @@
                         </div>
                       </div>
                     </div>
+                    <!-- Other Products -->
+                    <div class="flex flex-col space-y-4 mt-4 text-gray-500">
+                      <div class="flex flex-col">
+                        <h1 class="font-semibold">
+                          Other Preffered Product(s)
+                        </h1>
+                        <input
+                          type="text"
+                          placeholder="Please Specify"
+                          class="border border-gray-300 p-2 rounded-lg focus:outline-primary"
+                        />
+                        <hr class="text-gray-400 mt-3 mb-3" />
+                      </div>
+                      <div class="flex flex-col space-y-4">
+                        <button
+                          class="border border-primary p-3 flex justify-center w-full rounded-lg font-semibold text-primary hover:bg-primary transition duration-500 ease-in-out"
+                        >
+                          Change Password</button
+                        ><button
+                          class="bg-primary p-3 hover:bg-green-700 w-full rounded-lg transition duration-500 ease-in-out text-white font-semibold"
+                        >
+                          Save
+                        </button>
+                      </div>
+                    </div>
+                    <!-- Other Productrs Ends Here -->
                   </div>
                   <div
                     class="tab-pane fade"
@@ -643,7 +852,85 @@
                     role="tabpanel"
                     aria-labelledby="tabs-profile-tab"
                   >
-                    Tab 2 content
+                    <div
+                      class="flex-flex-col mt-5 space-y-4 text-gray-500 text-sm"
+                    >
+                      <div class="flex flex-col">
+                        <label for="CompanyName">Company Name</label>
+                        <input
+                          type="text"
+                          id="CompanyName"
+                          placeholder="ABC Enterprise"
+                          class="border border-gray-300 p-3 rounded-lg focus:outline-primary"
+                        />
+                      </div>
+                      <div class="flex flex-col">
+                        <label for="CompanyTaxId">Company Tax ID</label>
+                        <input
+                          type="text"
+                          id="CompanyTaxId"
+                          placeholder="12345678"
+                          class="border border-gray-300 rounded-lg p-3 focus:outline-primary"
+                        />
+                      </div>
+                      <div class="flex flex-col">
+                        <label for="BusinessType">Business Type</label>
+                        <select
+                          name="Business Type"
+                          id="BusinessType"
+                          class="border border-gray-300 rounded-lg p-3 focus:outline-primary"
+                        >
+                          <option value="1">Select Business Type</option>
+                          <option value="2">Business Type</option>
+                          <option value="3">Business Type</option>
+                        </select>
+                      </div>
+                      <div class="flex flex-col">
+                        <label for="BusinessMail">Business Email</label>
+                        <input
+                          type="text"
+                          id="BusinessMail"
+                          placeholder="abc@enterprise.com.ng"
+                          class="border border-gray-300 rounded-lg p-3 focus:outline-primary"
+                        />
+                      </div>
+                      <div class="flex flex-col">
+                        <label for="FiscalAddress">Fiscal Address</label>
+                        <input
+                          type="text"
+                          id="FiscalAddress"
+                          class="border border-gray-300 rounded-lg p-3 focus:outline-primary"
+                        />
+                      </div>
+                      <div class="flex flex-col">
+                        <label for="Country">Country</label>
+                        <select
+                          name="Business Type"
+                          id="Country"
+                          class="border border-gray-300 p-3 rounded-lg focus:outline-primary"
+                        >
+                          <option value="1">Nigeria</option>
+                          <option value="2">Ghana</option>
+                          <option value="3">Germany</option>
+                        </select>
+                      </div>
+                      <div class="flex flex-col">
+                        <label for="ZipCode">Zip Code</label>
+                        <input
+                          type="text"
+                          id="ZipCode"
+                          class="border rounded-lg border-gray-300 p-3 focus:outline-primary"
+                        />
+                      </div>
+                      <hr class="text-gray-300 mt-3 mb-3" />
+                      <div>
+                        <button
+                          class="bg-primary rounded-lg flex justify-center text-white w-full p-3 hover:bg-green-700 transition duration-500 ease-in-out"
+                        >
+                          Save
+                        </button>
+                      </div>
+                    </div>
                   </div>
                   <div
                     class="tab-pane fade"
@@ -651,19 +938,41 @@
                     role="tabpanel"
                     aria-labelledby="tabs-profile-tab"
                   >
-                    Tab 3 content
+                    <div class="text-gray-500 mt-3 text-sm">
+                      <div class="bg-gray-200 p-3 border-b-4 border-white">
+                        Complete account information in profile
+                      </div>
+                      <div class="bg-gray-200 p-3 border-b-4 border-white">
+                        Complete account information in profile
+                      </div>
+                      <div class="bg-gray-200 p-3 border-b-4 border-white">
+                        Verify Business email
+                      </div>
+                      <div class="bg-gray-200 p-3 border-b-4 border-white">
+                        Welcome to eki
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-
               <!-- End of Mobile Product Container -->
             </div>
+            <!-- Delete Account (Mobile) -->
+            <div class="my-10 md:hidden sm:block">
+              <button
+                class="border border-red-700 text-red-700 flex justify-center w-full rounded-lg p-3 font-semibold cursor-pointer hover:bg-red-700 hover:text-white transition duration-500 ease-in-out test-modal"
+                data-modal-toggle="popup-modal"
+              >
+                Delete Account
+              </button>
+            </div>
+            <!-- End Delete Account (Mobile) -->
           </div>
         </div>
       </div>
       <!-- Modal -->
       <div
-        class="hidden overflow-y-auto overflow-x-hidden fixed right-0 left-0 top-4 z-50 justify-center items-center md:inset-0 h-modal sm:h-full"
+        class="hidden overflow-y-auto overflow-x-hidden fixed right-0 left-0 md:top-4 sm:top-32 z-50 justify-center items-center md:inset-0 h-modal sm:h-full"
         id="popup-modal"
       >
         <div class="relative px-4 max-w-lg w-full h-full md:h-auto">
@@ -732,6 +1041,7 @@
       <!-- End Modal -->
     </section>
     <script src="./app.js"></script>
+    <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
   </body>
 </html>
